main content seems to be fixed on mobile

--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ ol
     padding:0;
 }
 
+
+
 #wrapper 
 {
     width: 62%;
@@ -398,7 +400,6 @@ ol
     z-index: 100;
     background: transparent;
 
-
 }
     
 .youtube-player img {
@@ -436,6 +437,10 @@ ol
     cursor: pointer;
 }
 
+#media .mobile_text{
+    display:none;
+}
+
 #media ul {
     padding: 0;
     margin: 0;
@@ -464,4 +469,38 @@ ol
 {
     opacity: 1.0;
     filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
+@media (max-width: 500px) { /* change to any number you want */
+    #wrapper {
+        width:100%;
+        margin:0 auto;
+        padding:5px;
+    }
+    #media img{
+        display:none;
+    }
+    #media ul {
+        display:block !important;
+        list-style-type: circle !important;
+    }
+    #media .mobile_text{
+        display:block !important; 
+    }
+
+    #media a 
+    {
+        text-decoration:none;
+        color:#C00;
+    }
+
+    #media a:hover 
+    {
+        border-bottom:1px solid #C00 !important;
+    }
+
+    .pub_img_div {
+    display: none;
+    margin:0;
+    }
 }
